<resources>
    <string name="app_name">SeriesDB</string>
    <string name="text_divider" translatable="false">•</string>

    <string name="search_hint">Search</string>
    <string name="unavailable">Unavailable</string>
    <string name="runtime">%1$d min</string>

    <string name="genre_action">Action</string>
    <string name="genre_adventure">Adventure</string>
    <string name="genre_anime">Anime</string>
    <string name="genre_comedy">Comedy</string>
    <string name="genre_crime">Crime</string>
    <string name="genre_drama">Drama</string>
    <string name="genre_espionage">Espionage</string>
    <string name="genre_family">Family</string>
    <string name="genre_fantasy">Fantasy</string>
    <string name="genre_history">History</string>
    <string name="genre_horror">Horror</string>
    <string name="genre_legal">Legal</string>
    <string name="genre_medical">Medical</string>
    <string name="genre_music">Music</string>
    <string name="genre_mystery">Mystery</string>
    <string name="genre_romance">Romance</string>
    <string name="genre_scifi">Science-Fiction</string>
    <string name="genre_sports">Sports</string>
    <string name="genre_supernatural">Supernatural</string>
    <string name="genre_thriller">Thriller</string>
    <string name="genre_war">War</string>
    <string name="genre_western">Western</string>
    <string name="genre_unknown">Unknown</string>

    <string name="show_status_indevelopment">In Development</string>
    <string name="show_status_ended">Ended</string>
    <string name="show_status_running">Running</string>
    <string name="show_status_tbd">To Be Determined</string>
    <string name="show_status_unknown">Unknown</string>

    <string name="detail_genres_title">Genres</string>
    <string name="detail_status_title">Status</string>
    <string name="detail_release_date_title">Original release</string>
    <string name="detail_seasons_count_title">Seasons</string>

    <string name="season_name">Season %1$d</string>
    <string name="favorite_shows_empty">No favorite shows yet.\nUse the search bar to add new ones.</string>
</resources>
